refactor: optimize core logic and performance integration with Antigravity